# quickstart-mgl-cpp

./: .clang-format  .gitignore  CMakeLists.txt  Project.cmake  Readme.md  config.cmake  config.h.in  version.hpp.in
app/: CMakeLists.txt
app/inc/: layers.hpp  material.hpp  shader.hpp
app/shaders/fragment/: fragment.fs
app/shaders/vertex/: vertex.vs
app/src/: gui_layer.cpp  main.cpp  material.cpp  render_layer.cpp  shader.cpp
cmake/: Build.cmake  ExternalDeps.cmake  ShadersHeaderGenerator.cmake  Unittest.cmake
src/app/: config.cmake  main.cpp
src/appcore/: appcore.hpp  application.cpp  application.hpp  base.hpp  builtins.hpp  config.cmake  event.hpp  input.cpp  input.hpp  instrumentor.hpp  log.cpp  log.hpp  pch.cpp  pch.hpp  span.hpp  timer.cpp  timer.hpp
src/appcore/glad/include/glad/: glad.h
src/appcore/glad/src/: glad.c
src/appcore/stb/: CMakeLists.txt  stb_image.h
src/appgl/: appgl.hpp  attachment.hpp  attribute.cpp  attribute.hpp  buffer.cpp  buffer.hpp  builtins.cpp  builtins.hpp  computeshader.cpp  computeshader.hpp  conditionalrender.cpp  conditionalrender.hpp  config.cmake  context.cpp  context.hpp  datatype.cpp  datatype.hpp  format.cpp  format.hpp  framebuffer.cpp  framebuffer.hpp  glmethods.hpp  program.cpp  program.hpp  query.cpp  query.hpp  renderbuffer.cpp  renderbuffer.hpp  sampler.cpp  sampler.hpp  scope.cpp  scope.hpp  shaderssources.hpp  subroutine.cpp  subroutine.hpp  texture.cpp  texture.hpp  texture2d.cpp  texture2d.hpp  texture3d.cpp  (+15 more)
src/appgl/contexts/: egl.cpp  glx.cpp
src/appgl/glad/include/KHR/: khrplatform.h
src/appgl/glad/src/: glad.c
src/appgl/sdl/: window.cpp  window.hpp
src/appgl/windows/: windowsdl.cpp
src/appwindow/: appwindow.hpp  builtins.hpp  config.cmake  event.hpp  input.hpp  window.cpp  window.hpp
src/appwindow/context/: event.hpp  input.cpp  input.hpp  window.cpp  window.hpp
src/appwindow/context/sdl/: window.cpp  window.hpp
src/appwindow/sdl/: window.cpp  window.hpp
src/examples/basic_alpha_blending/: main.cpp
src/examples/basic_index_buffer/: main.cpp
src/examples/basic_perspective_projection/: main.cpp
src/examples/basic_simple_color_triangle/: config.cmake  main.cpp
src/examples/basic_uniforms_and_attributes/: main.cpp
src/examples/compute_shader/: config.cmake  gif.hpp  main.cpp
src/mgl/: attachment.hpp  attribute.cpp  buffer.cpp  buffer.hpp  builtins.hpp  computeshader.cpp  computeshader.hpp  conditionalrender.cpp  config.cmake  context.cpp  context.hpp  datatype.cpp  datatype.hpp  format.cpp  framebuffer.cpp  glmethods.hpp  mgl.hpp  program.cpp  query.cpp  query.hpp  renderbuffer.cpp  sampler.cpp  scope.cpp  shaderssources.hpp  subroutine.cpp  subroutine.hpp  texture2d.cpp  texture2d.hpp  texture3d.cpp  texturearray.cpp  texturecube.cpp  uniform.cpp  uniformblock.cpp  uniformblock.hpp  varying.cpp  vertexarray.cpp  vertexarray.hpp
src/mgl/contexts/: egl.cpp  glx.cpp
src/mgl_core/: builtins.cpp  builtins.hpp  config.cmake  instrumentor.hpp  log.cpp  log.hpp  math.hpp  mgl_core.hpp  pch.cpp  pch.hpp  re.cpp  re.hpp  string.cpp  string.hpp  timer.cpp  timer.hpp  utils.hpp
src/mgl_opengl/: attachment.hpp  attribute.cpp  attribute.hpp  buffer.cpp  buffer.hpp  builtins.cpp  builtins.hpp  computeshader.cpp  computeshader.hpp  conditionalrender.cpp  conditionalrender.hpp  config.cmake  context.cpp  context.hpp  datatype.cpp  datatype.hpp  format.cpp  format.hpp  framebuffer.cpp  framebuffer.hpp  glslsource.cpp  glslsource.hpp  glslsources.hpp  mgl_opengl.hpp  program.cpp  program.hpp  query.cpp  query.hpp  renderbuffer.cpp  renderbuffer.hpp  sampler.cpp  sampler.hpp  scope.cpp  scope.hpp  shaderssources.hpp  subroutine.cpp  subroutine.hpp  texture.hpp  texture2d.cpp  texture2d.hpp  (+14 more)
src/mgl_opengl/contexts/: egl.cpp  glx.cpp
src/mgl_window/: builtins.cpp  builtins.hpp  config.cmake  mgl_window.hpp
src/mgl_window/context/: event.hpp  input.cpp  input.hpp  window.cpp  window.hpp
src/mgl_window/context/sdl/: window.cpp  window.hpp
src/mgl_window/render/: buffer.cpp  buffer.hpp  vertexarray.cpp  vertexarray.hpp
src/mgl_window/resources/: glslsource.cpp  glslsource.hpp  registry.cpp  registry.hpp  shadersource.cpp  shadersource.hpp
src/mgl_window/resources/stb/: stb_image.hpp
tests/: CMakeLists.txt
tests/test_mgl_core/: config.cmake  string.cpp
tests/test_mgl_opengl/: config.cmake  glslsource.cpp  main.cpp  string.cpp
tests/test_mgl_window/: config.cmake  glslsource.cpp  render.cpp
tests/test_sample/: simpletest.cpp
tests/tests_sample/: sample.cpp
vendors/: CMakeLists.txt
vendors/mgl/: CMakeLists.txt
